CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

## set prefix and sysroot
SET(CMAKE_PREFIX_PATH ${PREFIX_PATH})
SET(CMAKE_SYSROOT ${SYSROOT})

## strip the executbale
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s")

## add other apps test cases etc
ADD_SUBDIRECTORY(apps)
##ADD_SUBDIRECTORY(systemd)

#SET(CPACK_GENERATOR "DEB")
#SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE armhf)
#SET(CPACK_PACKAGE_NAME "navigation")
#SET(CPACK_PACKAGE_VERSION_MAJOR "1")
#SET(CPACK_PACKAGE_VERSION_MINOR "0")
#SET(CPACK_PACKAGE_VERSION_PATCH "0")
#SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "kallmanjaa") #required
#SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/systemd/postinst;${CMAKE_CURRENT_SOURCE_DIR}/systemd/prerm")

#INCLUDE(CPack)
