PROJECT(navigation)

SET(QT_APP_PATH /usr/local/bin)

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core WebEngine Network)


SET(SOURCE "src/Navigation.cpp")

INCLUDE_DIRECTORIES(headers)

ADD_EXECUTABLE(${PROJECT_NAME} "src/main.cpp" ${SOURCE_PARSER} 

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::WebEngine)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${QT_APP_PATH})

